Package_Tools/include_C/SDL_gamepad.h


typedef struct SDL_Gamepad SDL_Gamepad;
typedef enum SDL_GamepadType
{
    SDL_GAMEPAD_TYPE_UNKNOWN = 0,
    SDL_GAMEPAD_TYPE_STANDARD,
    SDL_GAMEPAD_TYPE_XBOX360,
    SDL_GAMEPAD_TYPE_XBOXONE,
    SDL_GAMEPAD_TYPE_PS3,
    SDL_GAMEPAD_TYPE_PS4,
    SDL_GAMEPAD_TYPE_PS5,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_PRO,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_LEFT,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_RIGHT,
    SDL_GAMEPAD_TYPE_NINTENDO_SWITCH_JOYCON_PAIR,
    SDL_GAMEPAD_TYPE_COUNT
} SDL_GamepadType;
typedef enum SDL_GamepadButton
{
    SDL_GAMEPAD_BUTTON_INVALID = -1,
    SDL_GAMEPAD_BUTTON_SOUTH,           
    SDL_GAMEPAD_BUTTON_EAST,            
    SDL_GAMEPAD_BUTTON_WEST,            
    SDL_GAMEPAD_BUTTON_NORTH,           
    SDL_GAMEPAD_BUTTON_BACK,
    SDL_GAMEPAD_BUTTON_GUIDE,
    SDL_GAMEPAD_BUTTON_START,
    SDL_GAMEPAD_BUTTON_LEFT_STICK,
    SDL_GAMEPAD_BUTTON_RIGHT_STICK,
    SDL_GAMEPAD_BUTTON_LEFT_SHOULDER,
    SDL_GAMEPAD_BUTTON_RIGHT_SHOULDER,
    SDL_GAMEPAD_BUTTON_DPAD_UP,
    SDL_GAMEPAD_BUTTON_DPAD_DOWN,
    SDL_GAMEPAD_BUTTON_DPAD_LEFT,
    SDL_GAMEPAD_BUTTON_DPAD_RIGHT,
    SDL_GAMEPAD_BUTTON_MISC1,           
    SDL_GAMEPAD_BUTTON_RIGHT_PADDLE1,   
    SDL_GAMEPAD_BUTTON_LEFT_PADDLE1,    
    SDL_GAMEPAD_BUTTON_RIGHT_PADDLE2,   
    SDL_GAMEPAD_BUTTON_LEFT_PADDLE2,    
    SDL_GAMEPAD_BUTTON_TOUCHPAD,        
    SDL_GAMEPAD_BUTTON_MISC2,           
    SDL_GAMEPAD_BUTTON_MISC3,           
    SDL_GAMEPAD_BUTTON_MISC4,           
    SDL_GAMEPAD_BUTTON_MISC5,           
    SDL_GAMEPAD_BUTTON_MISC6,           
    SDL_GAMEPAD_BUTTON_COUNT
} SDL_GamepadButton;
typedef enum SDL_GamepadButtonLabel
{
    SDL_GAMEPAD_BUTTON_LABEL_UNKNOWN,
    SDL_GAMEPAD_BUTTON_LABEL_A,
    SDL_GAMEPAD_BUTTON_LABEL_B,
    SDL_GAMEPAD_BUTTON_LABEL_X,
    SDL_GAMEPAD_BUTTON_LABEL_Y,
    SDL_GAMEPAD_BUTTON_LABEL_CROSS,
    SDL_GAMEPAD_BUTTON_LABEL_CIRCLE,
    SDL_GAMEPAD_BUTTON_LABEL_SQUARE,
    SDL_GAMEPAD_BUTTON_LABEL_TRIANGLE
} SDL_GamepadButtonLabel;
typedef enum SDL_GamepadAxis
{
    SDL_GAMEPAD_AXIS_INVALID = -1,
    SDL_GAMEPAD_AXIS_LEFTX,
    SDL_GAMEPAD_AXIS_LEFTY,
    SDL_GAMEPAD_AXIS_RIGHTX,
    SDL_GAMEPAD_AXIS_RIGHTY,
    SDL_GAMEPAD_AXIS_LEFT_TRIGGER,
    SDL_GAMEPAD_AXIS_RIGHT_TRIGGER,
    SDL_GAMEPAD_AXIS_COUNT
} SDL_GamepadAxis;
typedef enum SDL_GamepadBindingType
{
    SDL_GAMEPAD_BINDTYPE_NONE = 0,
    SDL_GAMEPAD_BINDTYPE_BUTTON,
    SDL_GAMEPAD_BINDTYPE_AXIS,
    SDL_GAMEPAD_BINDTYPE_HAT
} SDL_GamepadBindingType;
extern  int  SDL_AddGamepadMapping(const char *mapping);
extern  int  SDL_AddGamepadMappingsFromIO(SDL_IOStream *src, bool closeio);
extern  int  SDL_AddGamepadMappingsFromFile(const char *file);
extern  bool  SDL_ReloadGamepadMappings(void);
extern  char **  SDL_GetGamepadMappings(int *count);
extern  char *  SDL_GetGamepadMappingForGUID(SDL_GUID guid);
extern  char *  SDL_GetGamepadMapping(SDL_Gamepad *gamepad);
extern  bool  SDL_SetGamepadMapping(SDL_JoystickID instance_id, const char *mapping);
extern  bool  SDL_HasGamepad(void);
extern  SDL_JoystickID *  SDL_GetGamepads(int *count);
extern  bool  SDL_IsGamepad(SDL_JoystickID instance_id);
extern  const char *  SDL_GetGamepadNameForID(SDL_JoystickID instance_id);
extern  const char *  SDL_GetGamepadPathForID(SDL_JoystickID instance_id);
extern  int  SDL_GetGamepadPlayerIndexForID(SDL_JoystickID instance_id);
extern  SDL_GUID  SDL_GetGamepadGUIDForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetGamepadVendorForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetGamepadProductForID(SDL_JoystickID instance_id);
extern  Uint16  SDL_GetGamepadProductVersionForID(SDL_JoystickID instance_id);
extern  SDL_GamepadType  SDL_GetGamepadTypeForID(SDL_JoystickID instance_id);
extern  SDL_GamepadType  SDL_GetRealGamepadTypeForID(SDL_JoystickID instance_id);
extern  char *  SDL_GetGamepadMappingForID(SDL_JoystickID instance_id);
extern  SDL_Gamepad *  SDL_OpenGamepad(SDL_JoystickID instance_id);
extern  SDL_Gamepad *  SDL_GetGamepadFromID(SDL_JoystickID instance_id);
extern  SDL_Gamepad *  SDL_GetGamepadFromPlayerIndex(int player_index);
extern  SDL_PropertiesID  SDL_GetGamepadProperties(SDL_Gamepad *gamepad);
#define SDL_PROP_GAMEPAD_CAP_MONO_LED_BOOLEAN       SDL_PROP_JOYSTICK_CAP_MONO_LED_BOOLEAN
#define SDL_PROP_GAMEPAD_CAP_RGB_LED_BOOLEAN        SDL_PROP_JOYSTICK_CAP_RGB_LED_BOOLEAN
#define SDL_PROP_GAMEPAD_CAP_PLAYER_LED_BOOLEAN     SDL_PROP_JOYSTICK_CAP_PLAYER_LED_BOOLEAN
#define SDL_PROP_GAMEPAD_CAP_RUMBLE_BOOLEAN         SDL_PROP_JOYSTICK_CAP_RUMBLE_BOOLEAN
#define SDL_PROP_GAMEPAD_CAP_TRIGGER_RUMBLE_BOOLEAN SDL_PROP_JOYSTICK_CAP_TRIGGER_RUMBLE_BOOLEAN